k8s/manifests/insights/engine-simulator/network-policies/allow-ingress.yaml
# Allow ingress from insights-collector only
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: engine-simulator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: insights-collector
